# Dhruva-Evaluation-Suite

./: .gitignore  .gitmodules  README.md  pyproject.toml
examples/functional/yaml/: asr.yml  nmt.yml  transliteration.yml  websockets.yml
examples/lua/nmt_test/: NMT_test_en_te.lua
examples/performance/json/: socket_config.json
examples/performance/lua/: ASR_8Sec.lua  nmt_en_hi.lua
examples/performance/yaml/: performance_test.yml
examples/server/: test_server.py
examples/yaml/: asr.yml  transliteration.yml
src/: __init__.py  dhruva_evaluate.py  evaluate_f0.py  evaluate_mcd.py  evaluator.py  helpers.py  locust-compose.yml  locust.dockerfile  locust_evaluator.py  locust_new.py  pyproject.toml
src/config/: config.py
src/dhruva_datasets/: __init__.py  asr.py
src/dhruva_datasets/MUCS/: MUCS.py
src/dhruva_evaluators/: __init__.py  asr.py  dhruva_evaluator.py
src/dhruva_models/: __init__.py  dhruva_api_wrapper.py  dhruva_wrapper.py
src/dhruva_preprocessors/: asr.py
src/dhruva_preprocessors/speech_transcript_cleaning/: cleaning.py  num_to_word.py
src/functional/: asr.yml  constants.py  dhruva_evaluate.py  dhruva_logger.py  nmt.yml  transliteration.yml
src/functional/dhruva_datasets/: __init__.py
src/functional/dhruva_evaluators/: __init__.py  asr.py  nmt.py  transliteration.py  tts.py
src/functional/dhruva_metrics/: topk_accuracy.py
src/performance/: constants.py  load_test_helper.py  locust-socket-test.py  locust-socket.py  locust.sh  payload_generator.py  rest.py  rest_api_wrapper.py  socket_api_wrapper.py
src/plugins/: __init__.py  base.py
(+56 files in other folders)
